--- a/MY LOGS/CPP/C++ primer 二周目/1 开始.md
+++ b/MY LOGS/CPP/C++ primer 二周目/1 开始.md
@@ -63,4 +63,20 @@ while循环条件的求值就是执行表达式
 当从键盘向程序输入数据时，对于如何指出文件结束，不同操作系统有不同的约定。在Windows系统中，输入文件结束符的方法是敲Ctrl+Z（按住Ctrl键的同时按Z键），然后按Enter或Return键。在UNIX系统中，包括Mac OS X系统中，文件结束符输入是用Ctrl+D。
 
 
+## 1.5 类简介
+
+**类定义了行为**。一般而言，类的作者决定了类类型对象上可以使用的所有操作。当前，我们所知道的可以在Salesitem对象上执行的全部操作就是本节所列出的那些操作。
+### 文件重定向
+当你测试程序时，反复从键盘敲入这些销售记录作为程序的输入，是非常乏味的。大多数操作系统支持文件重定向，这种机制允许我们将标准输入和标准输出与命名文件关联起来：
+`$ addItems <infile >outfile`
+假定$是操作系统提示符，我们的加法程序已经编译为名为addItems.exe的可执行文件（在UNIX中是addItems），则上述命令会从一个名为infile的文件读取销售记录，并将输出结果写入到一个名为outfile的文件中，两个文件都位于当前目录中。
+
+## 小结与术语表
+赋值（assignment）：抹去一个对象的当前值，用一个新值取代之。
+缓冲区（buffer）：一个存储区域，用于保存数据。IO设施通常将输入（或输出）数据保存在一个缓冲区中，读写缓冲区的动作与程序中的动作是无关的。我们可以显式地刷新输出缓冲，以便强制将缓冲区中的数据写入输出设备。默认情况下，读cin会刷新cout；程序非正常终止时也会刷新cout。
+初始化（initialize）：在一个对象创建的时候赋予它一个值。
+字符串常量（string literal）：*零或多个字符*组成的序列，用双引号包围（"a string literal"）。
+未初始化的变量（uninitialized variable）未赋予初值的变量。*类类型*的变量如果未指定初值，则按类定义指定的方式进行初始化。定义在*函数内部的内置类型变量*（非全局/static 变量，全局会默认为0，存在bss 段）默认是不初始化的，除非有显式的初始化语句。试图使用一个未初始化变量的值是错误的。未初始化变量是bug的常见成因。
+表达式（expression）：最小的计算单元。一个表达式包含一个或多个*运算对象*，通常还包含一个或多个**运算符**。表达式求值会产生一个结果。例如，假设i和j是int对象，则i+j是一个表达式，它产生两个int值的和。
+语句（statement）：程序的一部分，指定了当程序执行时进行什么动作。**一个表达式接一个分号就是一条语句**；其他类型的语句包括语句块、if语句、for语句和while语句，所有这些语句内都包含其他语句。
 
