--- a/MY LOGS/链接、装载与库/目标文件.md
+++ b/MY LOGS/链接、装载与库/目标文件.md
@@ -1,3 +1,4 @@
+
 有一个专门的命令叫做`size`，它可以用来查看**ELF文件的代码段、数据段和BSS段的长度**（dec表示3个段长度的和的十进制，hex表示长度和的十六进制）：
 
 ```shell
@@ -5,7 +6,7 @@ $ size SimpleSection.o
   text  data  bss  dec  hex  filename
     95     8    4  107   6b  SimpleSection.o
 ```
-
+#objdump
 可以使用binutils的工具objdump来查看object内部的结构
 `objdump -h SimpleSection.o`
 参数“`-h`”就是把ELF文件的各个段的基本信息打印出来。我们也可以使用“`objdump –x`”把更多的信息打印出来
@@ -13,7 +14,6 @@ Linux还有一个很不错的工具叫`readelf`，它是专门针对ELF文件格
 
 挖掘各个段的内容，我们还是离不开 objdump 这个利器。Objdump 的 `“-s`”参数可以将所有段的内容以十六进制的方式打印出来 `，“-d`”参数可以将所有包含指令的段反汇编。我们将 objdump 输出中关于代码段的内容提取出来，分析一下关于代码段的内容（省略号表示略去无关内容）
 `objdump -s -d SimpleSection.o`
-
 `objdump -x -s -d SimpleSection.o`
 与上面类似但打印更多段信息
 
@@ -43,12 +43,12 @@ SYMBOL TABLE:
 
 一般编译器可以通过属性 attribute 来将代码中符号放到自定义段，如 gcc 在全局变量或函数之前加上“__ `attribute__((section(“name”)))`”属性就可以把相应的变量或函数放到以“`name`”作为段名的段中。
 
-
+# ELF
 ELF 文件结构：
 ![[QQ_1730308345232.png]]
 ELF目标文件格式的最前部是ELF文件头（ELF Header），它包含了描述整个文件的基本属性，比如ELF文件版本、目标机器型号、程序入口地址等。紧接着是ELF文件各个段。其中ELF文件中与段有关的重要结构就是段表（Section Header Table），该表描述了ELF文件包含的所有段的信息，比如每个段的段名、段的长度、在文件中的偏移、读写权限及段的其他属性。接着将详细分析ELF文件头、段表等ELF关键的结构。另外还会介绍一些ELF中辅助的结构，比如字符串表、符号表等。
 
-
+#readelf
 `readelf` 命令来详细查看ELF文件
 ```shell
 $readelf –h SimpleSection.o
@@ -74,7 +74,8 @@ ELF Header:
   Section header string table index:  8
 ```
 
-可以使用 `readelf -S` 工具来查看ELF文件的段，它显示出来的结果才是真正的段表结构
+# 段表
+可以使用 `readelf -S` 工具来查看ELF文件的段，它显示出来的结果才是真正的段表结构 
 ```shell
 $ readelf -S SimpleSection.o
 There are 11 section headers, starting at offset 0x118:
@@ -97,4 +98,73 @@ Key to Flags:
   I (info), L (link order), G (group), x (unknown)
   O (extra OS processing required) o (OS specific), p (processor specific)
 ```
+
+#  符号
+
+我们可以使用很多工具来查看ELF文件的符号表，比如readelf、objdump、nm等，比如使用“nm”来查看“SimpleSection. o”的符号结果如下： #nm
+```shell
+> nm a.o     						  
+0000000000000000 T _func1
+0000000000000090 D _global_init_var
+0000000000000004 C _global_uninit_var
+0000000000000038 T _main
+0000000000000094 d _main.static_var
+00000000000000e0 b _main.static_var2
+                 U _printf
+0000000000000098 s l_.str
+0000000000000000 t ltmp0
+0000000000000090 d ltmp1
+0000000000000098 s ltmp2
+00000000000000e0 b ltmp3
+00000000000000a0 s ltmp4
+```
+#objdump
+###  `objdump` 命令
+`objdump` 命令是一个更强大的工具，可以显示目标文件的各种信息，包括符号表、反汇编代码等。
+```
+objdump -t filename
+```
+####  常见选项
+- **`-t`**：显示符号表。
+- **`-T`**：显示动态符号表。
+- **`-C`**：显示符号的 C++ 名称（去修饰）。
+- **`-d`**：反汇编代码段。
+- **`-D`**：反汇编代码段并显示动态符号表。
+
+###  `llvm-objdump`
+
+```
+llvm-objdump [options] filename
+```
+
+#### 常见选项
+- **`-d`**：反汇编代码段。
+- **`-D`**：反汇编代码段并显示动态符号表。
+- **`-S`**：显示源代码行号信息（需要编译时保留调试信息）。
+- **`-C`**：显示符号的 C++ 名称（去修饰）。
+- **`-t`**：显示符号表。
+- **`-T`**：显示动态符号表。
+
+
+#readelf
+###  `llvm-reaelf`
+
+```shell
+llvm-readelf [options] filename
+```
+
+#### 常见选项
+- **`-s`**：显示符号表。
+- **`-S`**：显示段头表。
+- **`-h`**：显示 ELF 头信息。
+- **`-d`**：显示动态部分。
+- **`-a`**： 显示所有?？
+- **`-l`** :  查看程序头
+
+
+
+
+
+
+
 
