增加软件配置，记录我的环境与配置文件链接

--- a/MY LOGS/链接、装载与库/目标文件.md
+++ b/MY LOGS/链接、装载与库/目标文件.md
@@ -159,8 +159,10 @@ llvm-readelf [options] filename
 - **`-h`**：显示 ELF 头信息。
 - **`-d`**：显示动态部分。
 - **`-a`**： 显示所有?？
-- **`-l`** :  查看程序头
+- **`-l`** :  查看 program header / Segments
 
+Section： 节/段链接角度
+Segment： 装载角度：相同权限的段的集合
 
 
 
