--- a/MY LOGS/软件与配置.md
+++ b/MY LOGS/软件与配置.md
@@ -13,6 +13,9 @@
 - VScode for cpp：[【VS Code】四年功力 一刻掌握 速通C++插件/终端美化/工程管理 懒人必备\_哔哩哔哩\_bilibili](https://www.bilibili.com/video/BV1YG4y1v7uB/?spm_id_from=333.999.0.0&vd_source=33d3156975c92d1beb9e11e8b218f8b0)
 
 
+> [!Note]
+>Use `dotfiles`?
+
 ## Font
 JetBrainsMonoNL NF
 MapleMono NF
