--- a/MY LOGS/链接、装载与库/目标文件.md
+++ b/MY LOGS/链接、装载与库/目标文件.md
@@ -154,15 +154,32 @@ llvm-readelf [options] filename
 ```
 
 #### 常见选项
-- **`-s`**：显示符号表。
-- **`-S`**：显示段头表。
+- **`-s`**：显示符号表。查看 symbol
+- **`-S`**：显示段头表。查看 section
 - **`-h`**：显示 ELF 头信息。
-- **`-d`**：显示动态部分。
+- **`-d`**：显示动态链接部分。
 - **`-a`**： 显示所有?？
 - **`-l`** :  查看 program header / Segments
 
 Section： 节/段链接角度
 Segment： 装载角度：相同权限的段的集合
+# Segment
+当段的数量增多时，就会产生空间浪费的问题。ELF文件被映射时，是以系统的页长度作为单位的，那么每个段在映射时的长度应该都是系统页长度的整数倍；如果不是，那么多余部分也将占用一个页。一个ELF文件中往往有十几个段，那么内存空间的浪费是可想而知的。
+站在操作系统装载可执行文件的角度看问题时，可以发现它实际上并不关心可执行文件各个段所包含的实际内容，操作系统只关心一些跟装载相关的问题，最主要的是段的权限（可读、可写、可执行）。ELF文件中，段的权限往往只有为数不多的几种组合，基本上是三种：
+
+以代码段为代表的权限为可读可执行的段。
+
+以数据段和BSS段为代表的权限为可读可写的段。
+
+以只读数据段为代表的权限为只读的段。
+
+那么我们可以找到一个很简单的方案就是：对于相同权限的段，把它们合并到一起当作一个段进行映射。即为 segment。
+
+ELF可执行文件引入了一个概念叫做“Segment”，一个“Segment”包含一个或多个属性类似的“Section”。
+那么装载的时候就可以将它们看作一个整体一起映射，也就是说映射以后在进程虚存空间中只有一个相对应的VMA，而不是两个，这样做的好处是可以很明显地减少页面内部碎片，从而节省了内存空间。
+我们可以使用readelf命令来查看ELF的“Segment”。正如描述“Section”属性的结构叫做段表，描述“Segment”的结构叫程序头（Program Header），它描述了ELF文件该如何被操作系统映射到进程的虚拟空间
+`readelf -l SectionMapping.elf`
+
 
 
 
