--- a/MY LOGS/一生一芯/状态机.md
+++ b/MY LOGS/一生一芯/状态机.md
@@ -1,6 +1,6 @@
 ## 计算机系统都是状态机
 
-||程序|抽象计算机|CPU|
+|程序|抽象计算机|CPU|
 |---|---|---|---|
 |状态|{<V,PC>}|{<R,M>}|{时序逻辑电路}{时序逻辑电路}|
 |状态转移规则|C语言语句的语义|指令的语义|组合逻辑电路|
