--- a/MY LOGS/软件与配置.md
+++ b/MY LOGS/软件与配置.md
@@ -12,7 +12,7 @@
 - NeoVim：[【NeoVim】❤点击领取小彭老师同款 C++ 开发环境❤\_哔哩哔哩\_bilibili](https://www.bilibili.com/video/BV1FYtee4EaS/?spm_id_from=333.999.0.0&vd_source=33d3156975c92d1beb9e11e8b218f8b0)
 - VScode for cpp：[【VS Code】四年功力 一刻掌握 速通C++插件/终端美化/工程管理 懒人必备\_哔哩哔哩\_bilibili](https://www.bilibili.com/video/BV1YG4y1v7uB/?spm_id_from=333.999.0.0&vd_source=33d3156975c92d1beb9e11e8b218f8b0)
 
-
+- Nodejs: [Node.js — Download Node.js®](https://nodejs.org/en/download/)
 > [!Note]
 >Use `dotfiles`?
 
@@ -20,3 +20,48 @@
 JetBrainsMonoNL NF
 MapleMono NF
 FiraCode NF
+
+
+
+---
+
+ORB ubuntu22
+```sh
+ 
+sudo apt install cmake git curl -y
+sudo apt install tree wget libdw-dev libelf-dev libdwarf-dev
+sudo apt install build-essential
+sudo apt update sudo apt install ninja-build gdb nodejs npm
+sudo apt install clang pip libc++-dev
+git config --global user.email "yuesiyuan@huawei.com"
+git config --global user.name "yuesiyuan"
+pip3 install jinja2-cli
+```
+
+for jinja2 in bashrc/zshrc add:
+```
+PATH=$PATH:/home/ysy/.local/bin
+```
+
+
+zsh配置：
+```sh
+sudo apt install zsh
+sh -c "$(curl -fsSL https://gitee.com/pocmon/ohmyzsh/raw/master/tools/install.sh)"
+sudo wget -O $ZSH_CUSTOM/themes/haoomz.zsh-theme https://cdn.haoyep.com/gh/leegical/Blog_img/zsh/haoomz.zsh-theme
+
+cd ~/.oh-my-zsh/themes && ls
+
+
+git clone --depth=1 https://gitee.com/romkatv/powerlevel10k.git ${ZSH_CUSTOM:-$HOME/.oh-my-zsh/custom}/themes/powerlevel10k
+
+git clone https://github.moeyy.xyz/https://github.com/zsh-users/zsh-autosuggestions ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-autosuggestions
+
+
+git clone https://github.moeyy.xyz/https://github.com/zsh-users/zsh-syntax-highlighting.git ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-syntax-highlighting
+```
+`zshrc`:
+```
+plugins=(git zsh-autosuggestions zsh-syntax-highlighting z extract web-search)
+ZSH_THEME="robbyrussell"
+```
